# SKA

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  environment.yml  general.cpp  general.hpp  makefile  requirements.txt  setup.py  sk_align.cpp  sk_align.hpp  sk_compare.hpp  sk_fastq.cpp  sk_fastq.hpp  sk_refalign.hpp  sk_weed.cpp  ska-runner.py
old_src/: DNA.cpp  DNA.hpp  gzstream.h  kmers.cpp  sk_align.cpp  sk_alleles.cpp  sk_distance.cpp  sk_fasta.cpp  sk_fastq.hpp  sk_find.cpp  sk_humanise.cpp  sk_humanise.hpp  sk_info.hpp  sk_type.cpp  sk_weed.hpp  ska.cpp
old_tests/: DNA_unittest.cpp  Makefile  general_unittest  general_unittest.old
old_tests/DNA_unittest.dSYM/Contents/: Info.plist
old_tests/DNA_unittest.dSYM/Contents/Resources/DWARF/: DNA_unittest
old_tests/general_unittest.dSYM/Contents/Resources/DWARF/: general_unittest
old_tests/kmers_unittest.dSYM/Contents/: Info.plist
ska/: __init__.py  __main__.py
src/: DNA.cpp  DNA.hpp  general.cpp  general.hpp  kmers.cpp  kmers.hpp  sk_align.cpp  sk_align.hpp  sk_alleles.cpp  sk_alleles.hpp  sk_compare.cpp  sk_compare.hpp  sk_distance.cpp  sk_distance.hpp  sk_fasta.cpp  sk_fasta.hpp  sk_fastq.cpp  sk_fastq.hpp  sk_find.cpp  sk_find.hpp  sk_humanise.cpp  sk_info.cpp  sk_info.hpp  sk_merge.cpp  sk_merge.hpp  sk_refalign.cpp  sk_refalign.hpp  sk_summary.cpp  sk_summary.hpp  sk_type.cpp  sk_type.hpp  sk_unique.cpp  sk_unique.hpp  sk_weed.cpp  sk_weed.hpp  ska.cpp  ska_bindings.cpp
tests/: DNA_unittest  DNA_unittest.cpp  Makefile  general_unittest  general_unittest.cpp  kmers_unittest  kmers_unittest.cpp
tests/DNA_unittest.dSYM/Contents/Resources/DWARF/: DNA_unittest
tests/general_unittest.dSYM/Contents/: Info.plist
tests/general_unittest.dSYM/Contents/Resources/DWARF/: general_unittest
tests/kmers_unittest.dSYM/Contents/Resources/DWARF/: kmers_unittest
